--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <nav>
         <h3>Fitness</h3>
         <ul>
-          <li class="home">Home</li>
+          <li class="homer">Home</li>
           <li>Service</li>
           <li>Contact</li>
           <li>About</li>
