--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
           <li>Fitness</li>
           <li>Platform</li>
-          <li>Workout Libary</li>
+          <li>Workout Library</li>
           <li>App Design</li>
         </div>
       </div>
