all done for now

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           <h3>Calculate your BMI</h3>
           <p class="p">
             We believe fitness should be accessible to everyone, everywhere,
-            regardless of income or access to a gym.
+            regardless <span class="bmi-br">  <br> </span> of income or access to a gym.
           </p>
           <form action="">
             <div class="form-group">
