--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
             Mile Easily
           </h1>
           <p class="p">
-            We believe fitness should be accessible to everyone, everywhere,<br />
-            regardless of income or access to a gym. With <br />
+            We believe fitness should be accessible to everyone, <span class="br"> <br> </span> everywhere,
+            regardless of income or access to a gym.<span class="br"> <br> </span>  With 
             hundreds of professional workouts.
           </p>
           
