--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     <section class="change-habits ">
       <h1>Change Your Habits</h1>
       <p>
-        We believe fitness should be accessible to everyone, everywhere,
-        regardless of income or <br />
+        We believe fitness should be accessible to everyone, <br class="show"> everywhere,
+        regardless of income or <br class="br" />
         access to a gym.
       </p>
       <div class="four-card">
